<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaterMark</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="load_host">Load Host</string>
    <string name="load_watermark">Load Watermark</string>
    <string name="embed">Embed</string>
    <string name="extract">Extract</string>

</resources>
